<resources>
    <string name="app_name">RouteTrack</string>
    <string name="google_maps_key">AIzaSyCpSsjKH4GWC9nDVGJ-FdPgd9izipXCwwo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="summary">Summary</string>
    <string name="your_routes">Your routes</string>
    <string name="add_route">add route</string>
    <string name="sort_by">"Sort by:"</string>
    <string name="_0km">0km</string>
    <string name="total_distance_this_month">Total Distance This Month</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="total_time_this_month">Total Time This Month</string>
    <string name="_00_00_00_00">00:00:00:00</string>
    <string name="start">Start</string>
    <string name="finish_route">Finish route</string>
    <string name="tracking_map">tracking map</string>
    <string name="date">Date</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="avgspeed">AvgSpeed</string>
    <string name="refuel">Refuel</string>
    <string name="settings">Settings</string>
    <string name="identifier">Identifier</string>
    <string name="sign_out">Sign out</string>
    <string name="add_refuel">add refuel</string>
    <string name="refuel_image">refuel image</string>
    <string name="price">Price</string>
    <string name="liter">Liter</string>
    <string name="add">Add</string>
    <string name="add_image">Add image</string>
    <string name="_0l">0L</string>
    <string name="total_fuel_this_month">Total Fuel This Month</string>
    <string name="_0ron">0RON</string>
    <string name="total_fuel_cost_this_month">Total Fuel Cost This Month</string>
    <string name="routetrack">RouteTrack</string>
    <string name="splash_icon">Splash icon</string>
    <string name="vehicle">Vehicle:</string>
    <string name="choose_vehicle">Choose vehicle:</string>
    <string name="_0">0</string>
    <string name="total_trip_this_month">Total Trip This Month</string>
    <string name="profileimage">profileImage</string>
    <string name="change_picture">Change Picture</string>
    <string-array name="filter_options">
        <item>Date</item>
        <item>Distance</item>
        <item>Duration</item>
        <item>Avg speed</item>
    </string-array>
    <string-array name="vehicle_options">
        <item>Car</item>
        <item>Bike</item>
        <item>Walk</item>
    </string-array>
    <string-array name="vehicle_options2">
        <item>All</item>
        <item>Car</item>
        <item>Bike</item>
        <item>Walk</item>
    </string-array>
</resources>