<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.SummaryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="22dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_vehicle"
            android:textSize="30sp"
            />

        <Spinner
            android:id="@+id/summary_vehicleSpinner"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:padding="8dp"
            android:entries="@array/vehicle_options2"
            />

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/totalDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0km"
        android:textSize="40sp"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_totalDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/total_distance_this_month"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/totalTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00_00_00"
        android:textSize="40sp"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_totalTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/total_time_this_month"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/totalFuel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0l"
        android:textSize="40sp"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_totalFuel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/total_fuel_this_month"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/totalFuelCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0ron"
        android:textSize="40sp"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_totalFuelCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_fuel_cost_this_month"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/totalTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="40sp"
        android:visibility="gone"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_totalTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_trip_this_month"
        android:visibility="gone"
        />




</LinearLayout>