<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <item
        android:id="@+id/routeFragment"
        android:title="@string/your_routes"
        android:icon="@drawable/baseline_directions_car_24"
        />

    <item
        android:id="@+id/refuelFragment"
        android:title="@string/refuel"
        android:icon="@drawable/baseline_local_gas_station_24"
        />

    <item
        android:id="@+id/trackingFragment"
        android:title=""
        />

    <item
        android:id="@+id/summaryFragment"
        android:title="@string/summary"
        android:icon="@drawable/baseline_insert_chart_24"
        />

    <item
        android:id="@+id/settingsFragment"
        android:title="@string/settings"
        android:icon="@drawable/baseline_settings_24"
        />

</menu>