<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="6dp"
    app:cardCornerRadius="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/refuelImage"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:contentDescription="@string/refuel_image" />

        <TextView
            android:id="@+id/refuelPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:layout_alignParentEnd="true"
            android:text="@string/price"
            android:textSize="30sp"
            tools:ignore="RelativeOverlap" />


        <TextView
            android:id="@+id/refuelDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/date"
            android:textSize="20sp"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/refuelPrice"
            />

        <TextView
            android:id="@+id/refuelLiter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/liter"
            android:textSize="20sp"
            android:layout_toEndOf="@id/refuelImage"
            android:layout_alignBottom="@id/refuelImage"
            />


    </RelativeLayout>

</androidx.cardview.widget.CardView>