<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp">
    
    <ImageView
        android:id="@+id/routeImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/routeDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/routeDistance"
        app:layout_constraintTop_toBottomOf="@+id/routeImage"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/routeDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/routeDate"
        app:layout_constraintEnd_toStartOf="@+id/routeTime"
        app:layout_constraintTop_toBottomOf="@+id/routeImage"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/routeTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/routeDistance"
        app:layout_constraintEnd_toStartOf="@+id/routeSpeed"
        app:layout_constraintTop_toBottomOf="@+id/routeImage"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/routeSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avgspeed"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/routeTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/routeImage"
        />

</androidx.constraintlayout.widget.ConstraintLayout>